--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
             <input type="range" id="colsSlider" min="10" max="100" value="50">
             <label for="speedSlider">Speed (FPS)</label>
             <input type="range" id="speedSlider" min="1" max="30" value="10">
+            <label for="rulesSelect">Rules</label>
+            <select id="rulesSelect">
+                <option value="conway">Conway (standard)</option>
+                <option value="seeds">Seeds</option>
+                <!-- Ajoute d'autres variantes si tu veux -->
+            </select>
+            <label for="patternSelect">Pattern</label>
+            <select id="patternSelect">
+                <option value="random">Random</option>
+                <option value="block">Block</option>
+                <option value="beacon">Beacon</option>
+                <option value="glider">Glider</option>
+                <!-- Ajoute d'autres patterns si tu veux -->
+            </select>
             <button id="resetButton">Reset Grid</button>
         </div>
     </div>
