Classic GameofLife 3D ok, with zoom and camera move

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                 <option value="glider">Glider</option>
                 <!-- Ajoute d'autres patterns si tu veux -->
             </select>
+            <label for="zoomSlider">Zoom</label>
+            <input type="range" id="zoomSlider" min="5" max="60" value="20">
             <button id="resetButton">Reset Grid</button>
         </div>
     </div>
