--- a/index.html
+++ b/index.html
@@ -25,25 +25,22 @@
             <input type="range" id="speedSlider" min="1" max="30" value="10">
             <label for="rulesSelect">Rules</label>
             <select id="rulesSelect">
-                <option value="conway">Conway (standard)</option>
-                <option value="seeds">Seeds</option>
-                <!-- Ajoute d'autres variantes si tu veux -->
+                <option value="classic3d">Classique 3D (B6/S5-7)</option>
+                <option value="chaos3d">Chaos 3D (B5-7/S4-8)</option>
+                <option value="stable3d">Stable 3D (B6/S6-8)</option>
             </select>
-            <label for="patternSelect">Pattern</label>
-            <select id="patternSelect">
-                <option value="random">Random</option>
-                <option value="block">Block</option>
-                <option value="beacon">Beacon</option>
-                <option value="glider">Glider</option>
-                <!-- Ajoute d'autres patterns si tu veux -->
+
             </select>
             <label for="sizeSlider">Cube Size</label>
             <input type="range" id="sizeSlider" min="5" max="60" value="35">
             <label for="zoomSlider">Zoom</label>
             <input type="range" id="zoomSlider" min="5" max="60" value="15">
-            <label for="densitySlider">Densité initiale</label>
+            <label for="densitySlider">Density</label>
             <input type="range" id="densitySlider" min="0.01" max="0.5" step="0.01" value="0.15">
             <button id="resetGridButton">Reset Grid</button>
+            <button id="trailModeButton">Trail Mode</button>
+            <label for="trailSlider">Trail Duration</label>
+            <input type="range" id="trailSlider" min="5" max="100" value="40">
         </div>
     </div>
 </body>
